# SkillsGuard

./: .gitignore  README.md  SkillGuard_Implementation_Spec.md  SkillGuard_PRD_v1.0.docx  cybersecurity_unified_project_proposal.md  pyproject.toml
go-skillguard/: Makefile  go.mod  go.sum
rules/code_execution/: SG-CE-001-reverse-shell.yml  SG-CE-002-eval-exec-injection.yml  SG-CE-003-command-injection-subprocess.yml  SG-CE-004-curl-wget-pipe-shell.yml  SG-CE-005-dynamic-import-require.yml  SG-CE-006-process-spawning.yml  SG-CE-007-cron-scheduled-task.yml  SG-CE-008-persistence-mechanism.yml  SG-CE-009-privilege-escalation.yml  SG-CE-010-binary-download-execute.yml  SG-CE-011-python-pickle-deserialization.yml  SG-CE-012-nodejs-child-process.yml  SG-CE-013-shell-script-injection.yml  SG-CE-014-powershell-execution.yml  SG-CE-015-webshell-patterns.yml
rules/credential_theft/: SG-CT-001-api-key-harvest.yml  SG-CT-002-env-file-access.yml  SG-CT-003-ssh-key-access.yml  SG-CT-004-aws-credential-theft.yml  SG-CT-005-git-credential-access.yml  SG-CT-006-browser-cookie-theft.yml  SG-CT-007-keychain-credential-manager.yml  SG-CT-008-cloud-provider-token-theft.yml  SG-CT-009-database-credential-harvesting.yml  (+6 more)
tests/: conftest.py  test_ai_bom.py  test_api.py  test_cross_platform.py  test_dependency_checker.py  test_governance.py  test_hasher.py  test_html_report.py  test_isolation_checker.py  test_mcp_engines.py  test_metadata_validator.py  test_ml_classifier.py  test_monitoring.py  test_owasp_ast_coverage.py  test_phase3_api.py  test_prompt_injection.py  test_reporting.py  test_sandbox.py  test_scanner_integration.py  test_secret_detector.py  test_skill_parser.py  test_skill_sbom.py  test_structural.py  test_threat_intel.py  test_vector_search.py  test_verdict_scoring.py
yara_rules/: credential_patterns.yar  exfiltration.yar  obfuscation.yar  prompt_injection.yar
(+202 files in other folders)
